# Brownie

./: .gitignore  ADVANCED TODO  Hash.hs  LICENSE  README.md  TODO  brownie.cabal  deletableTODO  interpret.hs  pars_v03.hs
Language/: Commands.hs  Expressions.hs  Interpreter.hs  SkukiExec.hs  Types.hs
Parsing/: HashParser.hs  Parser.hs
Test/: Test_Commands.hs  Test_Interpret.hs  Test_Main.hs  Test_Parser.hs  Test_Types.hs
app/: Main.hs
src/: Hash.hs
src/Base/: Types.hs
src/Interpreting/: Commands.hs  Interpreter.hs
src/Language/: Commands.hs  Interpreter.hs  Types.hs
src/Parsing/: Lexer.hs  Parser.hs
src/TestUtilities/: TestUtilities.hs
test/: Spec.hs
