name:                brownie
version:             0.1.0.0
synopsis:            Language parser
description:         Please see README.md
homepage:            https://github.com/DominikDitoIvosevic/Brownie#readme
license:             BSD3
license-file:        LICENSE
author:              Dominik Dito Ivosevic
maintainer:          treeofkungi@gmail.com
copyright:           2016 Dominik Dito Ivosevic
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hash
                       Interpreting.Commands
                       Interpreting.Interpreter
                       Base.Types
                       Parsing.Parser
                       Parsing.Lexer
                       TestUtilities.TestUtilities
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath
                     , directory
                     , parsec
  default-language:    Haskell2010

executable brownie-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brownie
  default-language:    Haskell2010

test-suite brownie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , brownie
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DominikDitoIvosevic/Brownie
